Add issue Offline collections
- It is now possible to specify that a collection is on a drive which isn't always online, but shall still be used for global duplicate check.
- The index files from such collections will be synced to the default collection's archive folder on app shutdown.

--- a/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
@@ -56,4 +56,6 @@
 
     <c:CollectionMultiConverter x:Key="CollectionMultiConverter" />
 
+    <c:CollectionOptionEnabledConverter x:Key="CollectionOptionEnabledConverter" />
+
 </ResourceDictionary>
