Add Show blog description when hoovering blog name in details pane

--- a/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
+++ b/src/TumblThree/TumblThree.Presentation/Resources/ConverterResources.xaml
@@ -12,6 +12,8 @@
 
     <waf:ValidationErrorsConverter x:Key="ValidationErrorsConverter" />
 
+    <c:NullToBoolConverter x:Key="NullToBoolConverter" />
+    
     <c:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
 
     <c:BlogQueueInfoConverter x:Key="BlogQueueInfoConverter" />
